@@ -1,5 +1,6 @@
 package de.eldoria.shepard;
 
+import de.eldoria.shepard.botlist.BotListReporter;
 import de.eldoria.shepard.collections.CommandCollection;
 import de.eldoria.shepard.collections.KeyWordCollection;
 import de.eldoria.shepard.collections.Normandy;
@@ -45,7 +46,6 @@ public final class ShepardBot {
         } catch (InterruptedException e) {
             System.out.println("Startup interrupted");
         }
-
     }
 
     private void setup() {
@@ -98,6 +98,7 @@ public final class ShepardBot {
 
         instance.setup();
 
+        BotListReporter.initialize();
     }
 
     private void initiateJda() throws LoginException, InterruptedException {
@@ -107,7 +108,7 @@ public final class ShepardBot {
         jda.awaitReady();
 
         try {
-            Class.forName("com.mysql.cj.jdbc.Driver").newInstance();
+            Class.forName("com.mysql.cj.jdbc.Driver").getConstructor().newInstance();
         } catch (Exception e) {
             ShepardBot.getLogger().error(e.getMessage());
         }
@@ -166,6 +167,11 @@ public final class ShepardBot {
         System.exit(0);
     }
 
+    /**
+     * Get the logger instance.
+     *
+     * @return logger
+     */
     public static Logger getLogger() {
         return logger;
     }
